--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
     "@angular2-material/radio": "2.0.0-alpha.4",
     "@angular2-material/sidenav": "2.0.0-alpha.4",
     "@angular2-material/toolbar": "2.0.0-alpha.4",
-    "angular2-masonry": "0.0.18",
     "angularfire2": "^2.0.0-beta.0",
     "core-js": "^2.4.0",
     "firebase": "^2.4.2",
+    "masonry-layout": "^4.1.0",
     "normalize.css": "^4.1.1",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.12"
