--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@angular2-material/radio": "2.0.0-alpha.4",
     "@angular2-material/sidenav": "2.0.0-alpha.4",
     "@angular2-material/toolbar": "2.0.0-alpha.4",
+    "@ngrx/store": "^1.5.0",
     "angularfire2": "^2.0.0-beta.0",
     "core-js": "^2.4.0",
     "firebase": "^2.4.2",
